updated driver app

--- a/cometride-driverapp/DA/app/src/main/res/values/strings.xml
+++ b/cometride-driverapp/DA/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="title_activity_driver">Driver</string>
     <string name="total_riders_today">Total Riders Today:</string>
     <string name="line">----</string>
+    <string name="title_activity_driver2">Driver2</string>
 
 
 
