--- a/cometride-riderapp/CometRider/res/values/strings.xml
+++ b/cometride-riderapp/CometRider/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">CometRider</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-     <string name="for_all">Select Route</string> 
+     <string name="for_all">Show All Routes</string> 
      <string name="btn_rider">I am interested</string>
   
 </resources>
