--- a/cometride-riderapp/CometRider/res/values/strings.xml
+++ b/cometride-riderapp/CometRider/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="action_settings">Settings</string>
      <string name="all_routes">Show All Routes</string> 
      <string name="btn_rider">I am interested</string>
-  
+        <string name="img_logo">Logo</string>
+        <color name="white">#FFFFFF</color>
 </resources>
